css/main.css
* {
    font-family: 'Roboto', sans-serif;
    box-sizing: border-box;
}
p {
    font-size: 1.5em;
    text-align: center;
}
.about p 
{
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
}
h1 {
    font-size: 3em;
    margin: auto;
}

h2 {
    margin-top: 5px;
    font-size: 30pt;
}
h3 {
    font-size: 25pt;
    margin: auto;
}

.fa-brands {
    margin: 10px;
    padding: 0;
    text-decoration: none;
    border-radius: 20%;
    color: white;
    width: auto;
}

footer {
    background-color: black;
    display: block;
    text-align: center;
    align-items: center;
    justify-content: center;
    padding: 10px;
    margin-top: 20px;
    width: 100vw;
    border-top: 2px groove white;
}

body {
    margin: 0;
    background-image: url("../images/bg.jpg");
    background-size: cover;
    background-color: black;
    color: white;
    align-items: center;
}

i:hover {
    transform: scale(1.25);
    
}
i:active {
    opacity: 0.7;
}
section {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
}
.round-pic {
    border-radius: 50%;
    border: 2px groove white;
    height: auto;
    width: 200px;
    margin: 20px auto;
    justify-self: center;
}

.about {
    display: block;
    width: 90%;
    height: auto;
    margin: auto;
    text-align: center;
}

.projects {
    justify-content: center;
    align-items: center;
    color: white;
    width: 90%;
    text-align: center;
    margin: auto;
    display: flexbox;
    flex-direction: column;
    padding: 20px;
}

#project-grid-div {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
}

.project-div {
    width: 400px;
    height: 400px;
    padding: 10px;
    text-align: center;
    justify-content: center;
    align-items: center;
    /*background-color: black;*/
    background-color: rgb(10, 10, 10);
    margin: 15px;
    border-radius: 10px;
    border: 2px solid black;
    /*box-shadow: 0px 2px 2px 0px white;*/
}



.project-div p {
    font-size: 15pt;
    text-align: center;
}

.project-div h3 {
    margin-top: 20px;
}

.project-div img {
    height: 200px;
    width: 380px;
    border-radius: 10px;
}

@media (max-width: 450px) {
    .project-div img {
        width: 270px;
        height: auto;
    }
    .project-div {
        width: 300px !important;
        height: auto;
    }
    
}

a {
    text-decoration: none;
    color: white;
}

.project-link:hover .project-div {
    background-color: white;
    color: black;
}

.project-link:active .project-div {
    transform: scale(0.95)
}

.pic-container {
    display: flex;
    width: 20%;
    margin: auto;
    align-items: center;
    justify-content: center;
    justify-self: center;
}

